# cnn-audio-clasifier

./: .gitignore  Makefile  README.md  pyproject.toml
ops/: inference.py  train.py
src/: data_operations.py  dataset.py  inference.py  model.py  train.py
tests/: test_inference_endpoint.py  train_test.py
